--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,32 @@
   src: url("../fonts/helveticaneueroman-webfont.woff2") format("woff2"), url("../fonts/helveticaneueroman-webfont.woff") format("woff");
 }
 
+:root {
+  /* colors */
+  --color-negro-claro: #00000040;
+  --color-negro-oscuro: #000000;
+
+  /* Tipografía */
+  --h4: 32px;
+  --p: 16px;
+}
+
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  place-items: center;
   height: 100vh;
 
   section {
+    font-family: "Helvetica Neue", sans-serif;
     text-decoration: none;
     padding: 30px 20px;
-    font-size: 32px;
-    box-shadow: 0px 4px 4px 0px #00000040;
+    font-size: var(--h4);
+    box-shadow: 0px 4px 4px 0px var(--color-negro-claro);
     border-radius: 10px;
+    color: var(--color-negro-oscuro);
 
-    a {
-      font-family: "Helvetica Neue", sans-serif;
-      color: #000000;
-      text-decoration: none;
+    p {
+      font-size: var(--p);
     }
   }
 }
